src/test/ui/stability-attribute/stability-attribute-issue-2.stderr
error: field has missing stability attribute
  --> $DIR/stability-attribute-issue-2.rs:5:17
   |
LL | pub struct A<T>(pub T);
   |                 ^^^^^

error: aborting due to previous error

